# podcast-dl

./: CMakeLists.txt  Makefile  README.md  changelog.txt  podcastdl.c  podcastdl.h  util.c  util.h
src/: CMakeLists.txt  podcast.c  podcast.h  podcastdl.c  util.h
